	already-present ccache to verify that the KDC that issued the just-
	obtained creds was the same one that issued the previously-obtained
	ones.
	* src/v5.c(v5_validate_keytab): rename from the previous v5_validate
	function.
	* src/v5.c(v5_validate): try to validate using the keytab first, and
	if we don't get a definite answer, maybe try with the default ccache

2010-03-29
	* src/options.c,src/options.h,src/acct.c,src/auth.c: add and heed an
	"ignore_k5login" boolean option.

2010-03-08
	* krb5.spec,configure.ac: 2.3.11

2010-02-24
	* src/v5.c,v5.h: add wrapper functions for reading a cred keyblock as
	a keyblock (v5_creds_get_key) and a ticket's client
	(v5_ticket_get_client), and a wrapper for the set-user-to-user-key
	function (v5_auth_con_setuserkey).
	* src/uuauth.c: use the just-introduced abstractions
	* src/v5.c,v5.h: add wrapper function for krb5_enctype_to_string()

2010-02-12
	* src/minikafs.c: crank up debug verbosity (Chris Wing, #157107)
	* src/kuserok.c(_pam_krb5_kuserok): also set up the user's ccache,
	in case there's a process on the box that expects the user to have
	creds before it can look up the location of the user's .k5login file
	or read from it (#563442)
	* src/harness.c: fix --debug
	* src/kuserok.c,src/storetmp.c: don't close stdio on our helpers if
	we don't need to
	* src/logstdio.c: make it clear when a subprocess is debug logging

2010-01-19
	* src/minikafs.c: call krb5_allow_weak_crypto(), if defined, before
	doing anything with DES.  call krb5_enctype_enable(), if defined,
	before attempting to get a credential with a specific enctype.

2010-01-07
	* configure.in: check for krb5_change_password, krb5_set_password,
	krb5_xfree
	* src/v5.c: add v5_change_password(); make v5_free_unparsed_name()
	call krb5_xfree(), if it exists, in preference over
	krb5_free_unparsed_name() or free()
	* src/password.c: use v5_change_password()

2009-12-11
	* Makefile.am,configure.ac: relegate use of RPM to the 'archive'